hphp/test/slow/array_iterator/array-traversable-2.php.expectf
bool(true)
bool(true)
bool(true)
bool(true)
bool(true)
bool(false)
Traversable
array(0) {
}
KeyedTraversable
array(0) {
}
Container
array(0) {
}
KeyedContainer
array(0) {
}
Indexish
array(0) {
}

Fatal error: Argument 1 passed to ifoo() must implement interface IFoo, array given in %s/test/slow/array_iterator/array-traversable-2.php on line 28